--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.rtl.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.min.js",
             "node_modules/jquery/dist/jquery.min.js"
